# YOLOP

./: .gitignore
Lite-Mono-ONNX-Sample-main/: Lite-Mono-Convert2ONNX.ipynb  demo_onnx.py
ORB_SLAM2/: CMakeLists.txt  CameraTrajectory.txt  KeyFrameTrajectory.kitti  README.md  myslam  myslam.cpp  results_new.txt
ORB_SLAM2/Examples/Monocular/: mono_kitti.cc  mono_tum.cc
ORB_SLAM2/Examples/RGB-D/: TUM1.yaml  rgbd_tum.cc
ORB_SLAM2/Examples/Stereo/: stereo_euroc.cc
ORB_SLAM2/dataset/: far_rgbd  large  room
ORB_SLAM2/dataset/kitti/: 00  13
ORB_SLAM2/include/: Converter.h  Frame.h  Initializer.h  KeyFrame.h  KeyFrameDatabase.h  LoopClosing.h  Map.h  MapDrawer.h  MapPoint.h  Monodepth.h  ORBVocabulary.h  ORBextractor.h  ORBmatcher.h  Optimizer.h  PnPsolver.h  Sim3Solver.h  Tracking.h  Viewer.h
ORB_SLAM2/src/: Converter.cc  Frame.cc  FrameDrawer.cc  Initializer.cc  KeyFrameDatabase.cc  LoopClosing.cc  Map.cc  MapPoint.cc  Monodepth.cc  ORBmatcher.cc  Optimizer.cc  PnPsolver.cc  Sim3Solver.cc  Tracking.cc
ORB_SLAM2/utils/: associate.py  sort.py
YOLOP-opencv-dnn/: CMakeLists.txt  main.cpp  main.py
YOLOP-opencv-dnn/include/: yolop.h
YOLOP-opencv-dnn/libs/: libopencv_highgui.so.4.8.0
YOLOP-opencv-dnn/src/: yolop.cc
YOLOP/tools/: demo.py
monodepth2/: combine_model.py  exportonnx.py  test_simple.py
monodepth2/c++/: CMakeLists.txt  main.cpp
tools/: demo.py
